Correct border issue and border gap, as well as initial row sample

--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,11 @@ header {
   padding: 60px;
 }
 
+.container {
+  display: flex;
+  flex-direction: row;
+}
+
 .description {
   white-space: pre-wrap;
 }
@@ -32,7 +37,7 @@ header {
 }
 
 .row {
-  flex: row;
+flex: row;
   white-space: pre-wrap;
   height: 80px;
   border-top: 1px solid white;
